[package]
name = "idea"
version = "0.1.0"
edition = "2021"

[dependencies]
#env-file-reader = "0.3.0"
#homedir = "0.2.1"
dotenv = "0.15.0"
#openai_api_rust = "0.1.8"
openai = "1.0.0-alpha.14"
ollama-rs = "0.1.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
Inflector = "0.11.4"
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
rusty_ytdl = "*"


